--- a/app/views/tours/_form.html.erb
+++ b/app/views/tours/_form.html.erb
@@ -1,25 +1,27 @@
-<%= form_with url: search_tours_path, method: :post, local: true do |form| %>
-  <div class="field">
-    <%= form.label :name, 'Name' %>
-    <%= form.select :name, options_for_select(Tour.select(:name).distinct.order(:name).pluck(:name), params[:name]), prompt: 'Select Name' %>
-  </div>
+<%= form_with url: tours_path, method: :get, local: true, data: { turbo_frame: "search-results", turbo_action: "advance" } do |form| %>
+  <div class="flex flex-row flex-wrap gap-4 justify-center">
+    <div class="field">
+      <%= form.label :name, "Name", class: "block mb-1" %>
+      <%= form.select :name, options_for_select(Tour.select(:name).distinct.order(:name).pluck(:name), params[:name]), prompt: "(All)", class: "block p-2 border border-gray-300 rounded" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :days, 'Length' %>
-    <%= form.select :days, options_for_select(Tour.select(:days).distinct.order(:days).pluck(:days), params[:days]), prompt: 'Select Duration' %>
-  </div>
+    <div class="field">
+      <%= form.label :days, "Length", class: "block mb-1" %>
+      <%= form.select :days, options_for_select(Tour.select(:days).distinct.order(:days).pluck(:days), params[:days]), prompt: "(All)", class: "block p-2 border border-gray-300 rounded" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :start_date, 'Start Date' %>
-    <%= form.select :start_date, options_for_select(Tour.select(:start_date).distinct.order(:start_date).pluck(:start_date), params[:start_date]), prompt: 'Select Start Date' %>
-  </div>
+    <div class="field">
+      <%= form.label :start_date, "Start Date", class: "block mb-1" %>
+      <%= form.select :start_date, options_for_select(Tour.select(:start_date).distinct.order(:start_date).pluck(:start_date), params[:start_date]), prompt: "(All)", class: "block p-2 border border-gray-300 rounded" %>
+    </div>
 
-  <div class="field">
-    <%= form.label :availability, 'Availability' %>
-    <%= form.select :availability, options_for_select(Tour::AVAILABILITY_STATUSES.values), prompt: 'Select Availability' %>
-  </div>
+    <div class="field">
+      <%= form.label :availability, "Availability", class: "block mb-1" %>
+      <%= form.select :availability, options_for_select(Tour::AVAILABILITY_STATUSES.values), prompt: "(All)", class: "block p-2 border border-gray-300 rounded" %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit 'Search' %>
+    <div class="actions ml-4 mt-7">
+      <%= form.submit "Search", class: "p-2 bg-blue-500 text-white rounded" %>
+    </div>
   </div>
 <% end %>
