add stimulus search controller

--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container mx-auto">
-    <h1 class="text-2xl text-center font-extrabold text-blue-600 border-b-4 border-yellow-400 pb-2">
+    <h1 class="text-3xl text-center font-extrabold text-blue-900 border-b-4 border-yellow-400 pb-2">
      Europe Tours
     </h1>
-    <h2 class="bg-blue-500 text-white p-4 text-center">
+    <h2 class="bg-blue-900 font-bold text-white text-xl p-4 text-center">
       Find a Tour
     </h1>
   <div class="mt-2 flex flex-col justify-center items-center">
