--- a/app/views/tours/_tours.html.erb
+++ b/app/views/tours/_tours.html.erb
@@ -1,7 +1,7 @@
 <% if @tours.present? %>
 <div class="mt-4">
   <table class="min-w-full bg-white border border-gray-300">
-    <thead class="py-2 px-4 border-b border-gray-300 bg-gray-200 text-center text-sm font-bold text-gray-700">
+    <thead class="py-2 px-4 border-b border-gray-300 bg-gray-200 text-center text-sm font-extrabold text-gray-700">
       <tr>
         <th>Name</th>
         <th>Length</th>
@@ -17,8 +17,8 @@
         <tr>
           <td class="py-2 px-4 border-b border-gray-300 text-left"><%= tour.name %></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.days %></td>
-          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.start_date %></td>
-          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.end_date %></td>
+          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.start_date.strftime('%m/%d/%Y') %></td>
+          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.end_date.strftime('%m/%d/%Y')%></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.start_city %></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.end_city %></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.availability %></td>
@@ -27,6 +27,6 @@
     </tbody>
   </table>
 <% else %>
-  <p class="text-gray-600 text-center">No tours found</p>
+  <p class="mt-8 text-gray-600 text-center">No tours found</p>
 <% end %>
 </div>
