--- a/app/views/tours/_tours.html.erb
+++ b/app/views/tours/_tours.html.erb
@@ -17,8 +17,8 @@
         <tr>
           <td class="py-2 px-4 border-b border-gray-300 text-left"><%= tour.name %></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.days %></td>
-          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.start_date.strftime('%m/%d/%Y') %></td>
-          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.end_date.strftime('%m/%d/%Y')%></td>
+          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= format_date(tour.start_date) %></td>
+          <td class="py-2 px-4 border-b border-gray-300 text-center"><%= format_date(tour.end_date)%></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.start_city %></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.end_city %></td>
           <td class="py-2 px-4 border-b border-gray-300 text-center"><%= tour.availability %></td>
