--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body class="bg-gray-100">
-    <main class="container mx-auto mt-4 px-5 flex">
+    <main class="container mx-auto mt-4 px-5">
       <%= yield %>
     </main>
   </body>
