--- a/app/views/tours/_form.html.erb
+++ b/app/views/tours/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: tours_path, method: :get, local: true, data: { turbo_frame: "search-results", controller: "search", action: "input->search#submit" } do |form| %>
+<%= form_with url: tours_path, method: :get, local: true, data: { turbo_frame: "search-results", turbo_action: "advance", controller: "search", action: "input->search#submit" } do |form| %>
   <div class="flex flex-col md:flex-row flex-wrap gap-4 justify-center">
     <div class="field w-full md:w-auto">
       <%= form.label :name, "Name", class: "font-bold text-center block mb-1" %>
